# ml-zoomcamp-homework

./: README.md
01_Intro/: HW01.ipynb  HW01_B.ipynb  Intro_to_numpy.ipynb  Pandas.ipynb
02_Price_prediction/: 02 Price_prediction.ipynb
03_Churn_prediction/: W3.ipynb
05_deployment/: Dockerfile  W5_new_workflow.ipynb  W5_new_workflow.py  marketing.py  ping.py  predict.py  pyproject.toml  train.py
